<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="get_started_text">Show your\n responsibility\n towards society</string>
    <string name="forgot_password_msg">Don\'t worry! it happens. Please enter the email address associated with your account.</string>
    <string name="on_submit_msg">Check out your mailbox, you will receive an email containing link where you can reset your password</string>
    <string name="sign_up">Sign up</string>
    <string name="image">image</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="login_with_google">Login with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here">New Here?</string>
    <string name="or">--------------------- OR ---------------------</string>
    <string name="submit">Submit</string>
    <string name="forgot_npassword">Forgot\nPassword?</string>
    <string name="logout">LOGOUT</string>
    <string name="this_is_a_message">this is a message</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title">Title</string>
    <string name="start_typing">start typing</string>
</resources>